k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: leaderboard
  labels:
    name: leaderboard
    app: real-time-leaderboard
